# NASBenchAPI

./: .gitignore  .readthedocs.yaml  API_REFERENCE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: Makefile  api_reference.rst  benchmarks.rst  conf.py  index.rst  modules.rst
examples/: sample_usage.ipynb
nasbenchapi/: __init__.py  base.py  cli.py  nasbench101_api.py  nasbench201_api.py  nasbench301_api.py  nb_api.py  utils.py
scripts/: convert_nb101_tfrecord_to_pickle.py
