[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nasbenchapi"
version = "0.1.0"
description = "Lightweight, unified pickle-based NASBench APIs (101/201/301) with downloader"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "NASBenchAPI Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "tqdm>=4.60.0",
  "requests>=2.28.0",
]

[project.optional-dependencies]
docs = [
  "sphinx>=7.0.0",
  "sphinx-autodoc-typehints>=1.25.0",
  "furo>=2023.7.26",
]

[project.urls]
Homepage = "https://example.com/nasbenchapi"

[project.scripts]
nasbench-download = "nasbenchapi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["docs*"]

